// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printOpsHelp renders the ops help snapshot 1`] = `
"Usage: docs --ops-help

# docs operations
This manual covers docs maintenance and meta operations.

## Parking
docs park <name> [path]

Use this to attach a docs root to the global docs index.
\`docs park foo\` - park \`./docs\` when present, otherwise \`.\`
\`docs park foo ~/work/bar\` - park an explicit project or docs dir

## Fetch
docs fetch <source> <path> --handler <command> [--root <subpath>] [--transform <command>]

Use this to register and refresh fetched docs through an external handler.
\`docs fetch https://example.com/spec docs/external/spec --handler url\` - fetch one remote file into a docs subtree
\`docs fetch https://example.com/org/repo docs/external/spec --handler git --root api\` - limit the git source root passed to the handler

## Update
docs update

Use this to refresh registered fetches, then rebuild the global docs QMD index and embeddings.

For command-specific syntax details, use each command's \`--help\`.
"
`;

exports[`printRootHelp renders the bare root help snapshot 1`] = `
"Usage: docs [options] [command]

# docs
docs organizes project local and global documentation optimized for information quality.

## Overview & Organization
- All topics & docs are kept in and organized in \`docs\` directories
- \`docs\` includes project documentation, notes, etc. It also includes global machine documentation, flows, patterns, available tools, etc.
- \`docs/topics\` includes larger organized sets of documentation within the given topic - useful to keep \`docs\` lean.
- \`query\` indexes everything in global \`docs/**\` for lookup when quick scan with \`ls\` and \`topic\` doesn't include promising results at a glance. \`query\` doesn't index project docs directory.

### Browse
docs <where>
docs ls [where]

\`docs <where>\` accepts one non-command selector.
It may open a topic like \`docs ios\` or a docs view like \`docs machine\`.

\`docs ls [where]\` browses docs only.

\`[where]\` may be:
- \`.\`
- \`global\`
- \`docs/subdir\` or \`./docs/subdir\`
- a registered docs root like \`browser\`
- a workspace path like \`~/work/foo\`
- an explicit docs path like \`~/work/foo/docs\`

Examples
docs ios
docs machine
docs ls .
docs ls docs/subdir

### Query
docs query [--limit <n>] <query...> | status

Use this to search through parked global docs collections with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Topics
docs topic [topic] [section]

Topics contain specialized docs, available anywhere.
Use \`docs topic <name>\` to expand available docs for topic.
\`docs topic foo\` - view foo about/index first
\`docs topic foo bar\` - learn about bar section

TOPIC  TITLE        DESCRIPTION
ios    iOS Library  Apple-platform docs
ops    Ops Notes    This summary is intentionally longer than sixty-four characte...
qmd    QMD          local search docs

## Docs

### /fixture/home/.ngents/docs/architecture
  global-only.md - global architecture notes

### /fixture/home/.ngents/docs/browser
  cdp.md - Chrome CDP instructions

### /fixture/home/.ngents/docs/ngents
  docs.md - command index

### /fixture/home/.ngents/docs/process
  qa.md - qa process notes

### /fixture/repo/docs
  long-summary.md - This summary is intentionally longer than sixty-four characte...
  web-fetching.md - web browser tools

### /fixture/repo/docs/architecture
  local-only.md - local architecture notes
  main.md - read this first

To read docs operation manual use \`docs --ops-help\`.
"
`;

exports[`printRootHelp renders the help-only root help snapshot 1`] = `
"Usage: docs [options] [command]

# docs
docs organizes project local and global documentation optimized for information quality.

## Overview & Organization
- All topics & docs are kept in and organized in \`docs\` directories
- \`docs\` includes project documentation, notes, etc. It also includes global machine documentation, flows, patterns, available tools, etc.
- \`docs/topics\` includes larger organized sets of documentation within the given topic - useful to keep \`docs\` lean.
- \`query\` indexes everything in global \`docs/**\` for lookup when quick scan with \`ls\` and \`topic\` doesn't include promising results at a glance. \`query\` doesn't index project docs directory.

### Browse
docs <where>
docs ls [where]

\`docs <where>\` accepts one non-command selector.
It may open a topic like \`docs ios\` or a docs view like \`docs machine\`.

\`docs ls [where]\` browses docs only.

\`[where]\` may be:
- \`.\`
- \`global\`
- \`docs/subdir\` or \`./docs/subdir\`
- a registered docs root like \`browser\`
- a workspace path like \`~/work/foo\`
- an explicit docs path like \`~/work/foo/docs\`

Examples
docs ios
docs machine
docs ls .
docs ls docs/subdir

### Query
docs query [--limit <n>] <query...> | status

Use this to search through parked global docs collections with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Topics
docs topic [topic] [section]

Topics contain specialized docs, available anywhere.
Use \`docs topic <name>\` to expand available docs for topic.
\`docs topic foo\` - view foo about/index first
\`docs topic foo bar\` - learn about bar section

TOPIC  TITLE        DESCRIPTION
ios    iOS Library  Apple-platform docs
ops    Ops Notes    This summary is intentionally longer than sixty-four characte...
qmd    QMD          local search docs

To read docs operation manual use \`docs --ops-help\`.
"
`;
